--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "babel-preset-env": "^1.6.0",
+    "babel-register": "^6.26.0",
     "mocha": "^4.0.1"
+  },
+  "scripts": {
+    "test-1": "mocha --require babel-register test/test-1.js"
   }
 }
