--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
     "mocha": "^4.0.1"
   },
   "scripts": {
