--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "test-1": "mocha --require babel-register test/test-1.js",
-    "test-1-large": "mocha --require babel-register test/test-1-large.js"
+    "test-1-large": "mocha --require babel-register test/test-1-large.js",
+    "test-2": "mocha --require babel-register test/test-2.js"
   }
 }
