Add sumEven() code review code

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
+    "test-0": "mocha --require babel-register test/test-0.js",
     "test-1": "mocha --require babel-register test/test-1.js",
     "test-1-large": "mocha --require babel-register test/test-1-large.js",
     "test-2": "mocha --require babel-register test/test-2.js"
